[package]
name = "plume"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
lru = "0.16.3"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

